fix callout border on high contrast theme

--- a/src/DetailsView/Styles/detailsview.scss
+++ b/src/DetailsView/Styles/detailsview.scss
@@ -113,10 +113,6 @@ div.insights-file-issue-details-dialog-container {
     padding-left: 5px !important;
 }
 
-.details-view-dropdown-callout {
-    right: 0 !important;
-}
-
 .scoping-panel {
     .scoping-container {
         .scoping-description {
